package PaooGame.Items;

public class Decorations {
}
