package PaooGame.Items;

public class Indestructible {
}
